--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,17 @@
 [project]
-name = "estatistica"
+name = "machine-learnig"
 version = "0.1.0"
-description = "Add your description here"
+description = ""
+authors = [
+    {name = "Henryque",email = "henryque.affiune10@gmail.com"}
+]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pandas>=2.3.3",
+    "pandas (>=2.3.3,<3.0.0)"
 ]
+
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
