--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,11 @@
 [project]
 name = "machine-learnig"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "Henryque",email = "henryque.affiune10@gmail.com"}
-]
-readme = "README.md"
-requires-python = ">=3.12"
+description = "Add your description here"
+requires-python = ">=3.12.10"
 dependencies = [
-    "pandas (>=2.3.3,<3.0.0)",
-    "matplotlib (>=3.10.7,<4.0.0)",
-    "scipy (>=1.16.3,<2.0.0)"
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.4",
+    "pandas>=2.3.3",
+    "scipy>=1.16.3",
 ]
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-package-mode = false
