--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,15 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12.10"
 dependencies = [
+    "fastapi>=0.121.3",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "pingouin>=0.5.5",
+    "pydantic>=2.12.4",
     "scikit-learn>=1.7.2",
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.5",
+    "uvicorn>=0.38.0",
 ]
